dropshot/tests/fail/bad_channel1.stderr
error: An argument of type dropshot::WebsocketConnection must be provided last.
  --> tests/fail/bad_channel1.rs:10:5
   |
10 | /     protocol = WEBSOCKETS,
11 | |     path = "/test",
   | |___________________^
